# pydatapgh

./: .gitignore  README.md  pyproject.toml
projects/hometown_heros/: README.md  generate_cover_photos.py  generate_linkedin.py  generate_meetup_descrip.py  linkedin.html
