[project]
name = "pydatapgh"
version = "0.1.0"
description = "Scripts and resources for automating PyData Pgh tasks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto>=2.49.0",
    "boto3>=1.37.1",
    "faker>=37.1.0",
    "fastapi>=0.115.11",
    "fsspec>=2025.3.0",
    "imgkit>=1.2.3",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "jsonpatch>=1.33",
    "matplotlib>=3.10.1",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "pydantic>=2.10.6",
    "s3fs>=2025.3.0",
    "selenium>=4.31.0",
]
